Bali-Tourism-Kel3

--- a/destination.html
+++ b/destination.html
@@ -306,7 +306,7 @@
 		<div class="col-left">
 			<p>Copyright &copy; 2024</p>
 			<p>Universitas Pamulang <br>
-			Phone : +62 85889247196 <br>
+			Phone : +62 85889xxxx <br>
 			Email : Kelompok3</p>
 			<a href=""_blank"><span class="ion-social-facebook icon-social"></span></a>
 			<a href="" target="_blank"><span class="ion-social-instagram icon-social"></span></a>
