--- a/gallery.html
+++ b/gallery.html
@@ -351,13 +351,13 @@
 	<div class="texture-handler-top"></div>
 	<div class="row">
 		<div class="col-left">
-			<p>Copyright &copy; 2017</p>
-			<p>Jl. Panglima Sudirman, Caruban Madiun <br>
-			Phone : +62 851 2343 9090 <br>
-			Email : contact@bavel.com </p>
-			<a href="https://www.facebook.com/bestbali/" target="_blank"><span class="ion-social-facebook icon-social"></span></a>
-			<a href="https://www.instagram.com/explorebali/" target="_blank"><span class="ion-social-instagram icon-social"></span></a>
-			<a href="https://twitter.com/hashtag/explorebali?lang=en" target="_blank"><span class="ion-social-twitter icon-social"></span></a>
+			<p>Copyright &copy; 2024</p>
+			<p>Universitas Pamulang <br>
+			Phone : +62 85889xxxx <br>
+			Email : Kelompok3</p>
+			<a href=""_blank"><span class="ion-social-facebook icon-social"></span></a>
+			<a href="" target="_blank"><span class="ion-social-instagram icon-social"></span></a>
+			<a href="" target="_blank"><span class="ion-social-twitter icon-social"></span></a>
 		</div>
 		<div class="col-right">
 			<b>EXPERIENCE</b>
@@ -381,16 +381,16 @@
 		<div class="col-right">
 			<b>WHAT'S HAPPEN</b>
 			<ul>
-				<li><a href="#">News</a></li>
-				<li><a href="#">Event</a></li>
+				<li><a href="news.html">News</a></li>
+				<li><a href="event.html">Event</a></li>
 				<li><a href="#">Tips & Info</a></li>
 			</ul>
 		</div>
 	</div>
 	<div class="footer-bottom">
-		<p>Yogi Prasetyawan - Created With <span class="ion-heart red"></span> to create a Lovable Website</p>
+		<p>Created With <span class="ion-heart red"></span> to create a Lovable Website</p>
 	</div>
-</section>
+</section> 
 
 <script type="text/javascript" src="/js/jquery.js"></script>
 <script type="text/javascript" src="/js/main.js"></script>
