--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 	<div class="container">
 		<div class="section-header-inner">
 			<div class="section-header-title">
-				<h3 class="title">GREAT <br> ART <br>OF <br>BALI</h3>
+				<h3 class="title">GREAT ART<br>OF BALI</h3>
 				<p>Telusuri Keindahan Bali Yang <br> Belum Pernah Anda Temui Sebelumnya</p>
 				<a href="destination.html" class="btn btn-round btn-orange">See Our Destination</a>
 			</div>
@@ -121,17 +121,17 @@
 			<div class="col">
 				<img src="img/About/035-trekking.png">
 				<h2>ADVENTURE</h2>
-				<p>Dapatkan pengalaman berpetualang yang belum pernah anda rasakan sebelumnya hanya di Bali</p>
+				<p style="width: 80%; margin: auto;">Dapatkan pengalaman berpetualang yang belum pernah anda rasakan sebelumnya hanya di Bali</p>
 			</div>
 			<div class="col">
 				<img src="img/About/028-book.png">
 				<h2>GUIDE</h2>
-				<p>Kami memberikan info - info seputar Bali mulai dari event dan destinasi terbaik</p>
+				<p style="width: 80%; margin: auto;">Kami memberikan info - info seputar Bali mulai dari event dan destinasi terbaik</p>
 			</div>
 			<div class="col">
 				<img src="img/About/024-tent.png">
 				<h2>STAY</h2>
-				<p>Anda tidak perlu kawatir akan menetap dimana karna kami menyediakan tiket Hotel terbaik</p>
+				<p style="width: 80%; margin: auto;">Anda tidak perlu kawatir akan menetap dimana karna kami menyediakan tiket Hotel terbaik</p>
 			</div>
 		</div>
 	</div>
@@ -155,8 +155,8 @@
 <section class="section section-discover" id="discover">
 	<div class="section-head">
 		<div class="section-line"></div>
-		<h3 class="section-title">DISCOVERY BALI</h3>
-		<p class="section-subtitle">Adalah sebuah warisan indahnya alam dan budaya yang masih terjaga di Bali yang dapat anda jelajahi</p>
+		<h3 class="section-title">DISCOVER BALI</h3>
+		<p class="section-subtitle">Bali adalah sebuah warisan indahnya alam dan budaya yang masih terjaga di Bali yang dapat anda jelajahi</p>
 	</div>
 	<div class="section-discover-body slides">
 		<div class="col">
@@ -452,7 +452,7 @@
 		<div class="col-left">
 			<p>Copyright &copy; 2024</p>
 			<p>Universitas Pamulang <br>
-			Phone : +62 85889247196 <br>
+			Phone : +62 85889xxxx <br>
 			Email : Kelompok3</p>
 			<a href=""_blank"><span class="ion-social-facebook icon-social"></span></a>
 			<a href="" target="_blank"><span class="ion-social-instagram icon-social"></span></a>
