--- a/news.html
+++ b/news.html
@@ -110,7 +110,7 @@
 			<div class="content">
 				<div class="col">
 					<div class="content-img">
-						<img src="img/news/039443100_1523457714-IMG-20180411-WA0038.jpg">
+						<img src="img/news/039443100_1523457714-IMG-20180411-WA0038.jpg" style="height: 100%;">
 						<span class="label-img"> News</span>
 					</div>
 					<div class="content-desc">
@@ -132,7 +132,7 @@
 				</div>
 				<div class="col">
 					<div class="content-img">
-						<img src="img/news/suarabali.jpg">
+						<img src="img/news/suarabali.jpg" style="height: 100%;">
 						<span class="label-img"> News</span>
 					</div>
 					<div class="content-desc">
@@ -154,7 +154,7 @@
 				</div>
 				<div class="col">
 					<div class="content-img">
-						<img src="img/news/balinew.jpg">
+						<img src="img/news/balinew.jpg" style="height: 100%;">
 						<span class="label-img"> News</span>
 					</div>
 					<div class="content-desc">
@@ -176,7 +176,7 @@
 				</div>
 				<div class="col">
 					<div class="content-img">
-						<img src="img/news/anniversary.jpg">
+						<img src="img/news/anniversary.jpg" style="height: 100%;">
 						<span class="label-img"> News</span>
 					</div>
 					<div class="content-desc">
@@ -198,7 +198,7 @@
 				</div>
 				<div class="col">
 					<div class="content-img">
-						<img src="img/news/legianBeach.jpg">
+						<img src="img/news/legianBeach.jpg" style="height: 100%;">
 						<span class="label-img"> News</span>
 					</div>
 					<div class="content-desc">
@@ -291,7 +291,7 @@
 		<div class="col-left">
 			<p>Copyright &copy; 2024</p>
 			<p>Universitas Pamulang <br>
-			Phone : +62 85889247196 <br>
+			Phone : +62 85889xxxx <br>
 			Email : Kelompok3</p>
 			<a href=""_blank"><span class="ion-social-facebook icon-social"></span></a>
 			<a href="" target="_blank"><span class="ion-social-instagram icon-social"></span></a>
