--- a/single-destination.html
+++ b/single-destination.html
@@ -193,7 +193,7 @@
 					</div>
 					<div class="input-form" id="find">
 						<label></label>
-						<button class="btn btn-ticket btn-orange" style="margin-top: 37px;text-align: right;" target="blank"> <a href="payment-gateway-integration-main/paymentPage.html">Purchase</a></button>
+						<a href="payment-gateway-integration-main/paymentPage.html" style="margin-top: 37px;text-align: right;" target="blank">Purchase</a>
 					</div>
 				</form>
 			</div>
@@ -209,7 +209,7 @@
 		<div class="col-left">
 			<p>Copyright &copy; 2024</p>
 			<p>Universitas Pamulang <br>
-			Phone : +62 85889247196 <br>
+			Phone : +62 85889xxxx <br>
 			Email : Kelompok3</p>
 			<a href=""_blank"><span class="ion-social-facebook icon-social"></span></a>
 			<a href="" target="_blank"><span class="ion-social-instagram icon-social"></span></a>
