--- a/single-culture.html
+++ b/single-culture.html
@@ -204,7 +204,7 @@ Guru Besar Institut Seni Indonesia (ISI) Denpasar Prof Anak Agung Rai Kalam meni
 		<div class="col-left">
 			<p>Copyright &copy; 2024</p>
 			<p>Universitas Pamulang <br>
-			Phone : +62 85889247196 <br>
+			Phone : +62 85889xxxx <br>
 			Email : Kelompok3</p>
 			<a href=""_blank"><span class="ion-social-facebook icon-social"></span></a>
 			<a href="" target="_blank"><span class="ion-social-instagram icon-social"></span></a>
